Agregando dos parrafos

--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
         <li>Otoño - 21 septiembre</li>
         <li>Invierno - 21 diciembre</li>
     </ol>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nam perspiciatis saepe beatae blanditiis doloremque? Distinctio error officia quisquam obcaecati iusto, dolor, fuga ex, repellendus ea neque blanditiis! Alias, consectetur.
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nam perspiciatis saepe beatae blanditiis doloremque? Distinctio error officia quisquam obcaecati iusto, dolor, fuga ex, repellendus ea neque blanditiis! Alias, consectetur.
+    </p>
     <script src="index.js"></script>
 </body>
 </html>
